# student-cli-tool

./: LICENSE  pyproject.toml
.github/workflows/: package-on-release.yaml
